--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lesson</title>
+    <title>New Employee</title>
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
@@ -126,9 +126,10 @@
               </div>
               <select class="form-select mb-3 FullName idSelect" aria-label="Default select example" required>
                 <option selected>Department</option>
-                <option value="1">Marketing</option>
-                <option value="2">Accounting</option>
-                <option value="3">HR</option>
+                <option value="1">None</option>
+                <option value="2">Marketing</option>
+                <option value="3">Accounting</option>
+                <option value="4">HR</option>
               </select>
               <input type="date" class="form-control FullName">
             </div>
@@ -182,9 +183,10 @@
               </div>
               <select class="form-select mb-3 FullName idSelectEdit" aria-label="Default select example" required>
                 <option selected>Department</option>
-                <option value="1">Marketing</option>
-                <option value="2">Accounting</option>
-                <option value="3">HR</option>
+                <option value="None">None</option>
+                <option value="Marketing">Marketing</option>
+                <option value="Accounting">Accounting</option>
+                <option value="HR">HR</option>
               </select>
               <input type="date" class="form-control FullName">
             </div>
