--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="d-flex justify-content-around">
             <div class="formModalDiv">
               <input type="text" class="form-control FullName idName mb-3" placeholder="FullName" required>
-              <input type="email" class="form-control FullName idEmail mb-3" placeholder="Email">
+              <input type="email" class="form-control FullName idEmail mb-3" placeholder="Email" required>
               <input type="text" class="form-control FullName idMobile mb-3" placeholder="Mobile" required>
             </div>
             <div>
@@ -157,7 +157,7 @@
           <div class="d-flex justify-content-around">
             <div class="formModalDiv">
               <input type="text" class="form-control FullName idNameEdit mb-3" placeholder="FullName" required>
-              <input type="email" class="form-control FullName idEmailEdit mb-3" placeholder="Email">
+              <input type="email" class="form-control FullName idEmailEdit mb-3" placeholder="Email" required>
               <input type="text" class="form-control FullName idMobileEdit mb-3" placeholder="Mobile" required>
             </div>
             <div>
