--- a/index.html
+++ b/index.html
@@ -1,210 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Employee</title>
-    <link
-      href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/flexboxgrid.min.css" />
-    <link
-      rel="stylesheet"
-      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
-    />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.min.css" />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>New Employee</title>
+  <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/flexboxgrid.min.css" />
+  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/main.min.css" />
+</head>
+
+<body>
 
 
-    <div class="mainDiv d-flex">
-      <div class="leftBack"></div>
-        <div class="container">
-          <div class="form d-flex align-items-center justify-content-between pt-4">
-            <div class="formInput d-flex align-items-center">
-              <i class='bx bx-search me-2' ></i>
-              <input type="text" class="search" placeholder="Search">
-            </div>
-            <div class="iconss d-flex align-items-center">
-              <i class='bx bx-message icon me-3'></i>
-              <i class='bx bx-power-off icon' ></i>
-            </div>
+  <div class="mainDiv d-flex">
+    <div class="leftBack"></div>
+    <div class="container">
+      <div class="form d-flex align-items-center justify-content-between pt-4">
+        <div class="formInput d-flex align-items-center">
+          <i class='bx bx-search me-2'></i>
+          <input type="text" class="search" placeholder="Search">
+        </div>
+        <div class="iconss d-flex align-items-center">
+          <i class='bx bx-message icon me-3'></i>
+          <i class='bx bx-power-off icon'></i>
+        </div>
+      </div>
+
+      <div class="new d-flex align-items-center pt-4">
+        <div class="user">
+          <i class='bx bxs-user-account userss'></i>
+        </div>
+        <div class="newName">
+          <h2 class="nameh2">New Employee</h2>
+          <p class="text">Form design with validation</p>
+        </div>
+      </div>
+
+
+      <div class="blockDiv">
+        <div class="mainblock d-flex align-items-center justify-content-between">
+          <div class="plusInput">
+            <!-- <i class='bx bx-search'></i> -->
+            <input type="text" class="form-control searchUser" placeholder="Search Employee">
           </div>
-
-          <div class="new d-flex align-items-center pt-4">
-            <div class="user">
-              <i class='bx bxs-user-account userss'></i>
-            </div>
-            <div class="newName">
-              <h2 class="nameh2">New Employee</h2>
-              <p class="text">Form design with validation</p>
-            </div>
+          <div class="plusDiv">
+            <button data-bs-toggle="modal" data-bs-target="#addedModal" class="btn btn-primary plusAdd">
+              + Add New
+            </button>
           </div>
+        </div>
 
-
-          <div class="blockDiv">
-            <div class="mainblock d-flex align-items-center justify-content-between">
-              <div class="plusInput">
-                <!-- <i class='bx bx-search'></i> -->
-                  <input type="text" class="form-control searchUser" placeholder="Search Employee">
-              </div>
-              <div class="plusDiv">
-                <button data-bs-toggle="modal" data-bs-target="#addedModal" class="btn btn-primary plusAdd">
-                  + Add New
-                </button>
-              </div>
-            </div>
-
-            <div class="EmployeesDiv">
-              <table class="table table-hover">
-                <thead>
-                  <tr>
-                    <th scope="col">Employee Name</th>
-                    <th scope="col">Email Address (Personal)</th>
-                    <th scope="col">Mobile Number</th>
-                    <th scope="col">Department</th>
-                    <th scope="col">Action</th>
-                  </tr>
-                </thead>
-                <tbody class="tbody">
-                  <!-- <tr>
+        <div class="EmployeesDiv">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Employee Name</th>
+                <th scope="col">Email Address (Personal)</th>
+                <th scope="col">Mobile Number</th>
+                <th scope="col">Department</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody class="tbody">
+              <!-- <tr>
                     <th scope="row">1</th>
                     <td>Mark</td>
                     <td>Otto</td>
                     <td>@mdo</td>
                     <td>@mdo</td>
                   </tr> -->
-                </tbody>
-              </table>
-              </div>
-          </div>
+            </tbody>
+          </table>
         </div>
-    </div>
-
-
-
-
-<!-- Modal Add-->
-<div class="modal fade" id="addedModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Employee Form</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form class="formadd">
-          <div class="d-flex justify-content-around">
-            <div class="formModalDiv">
-              <input type="text" class="form-control FullName idName mb-3" placeholder="FullName" required>
-              <input type="email" class="form-control FullName idEmail mb-3" placeholder="Email" required>
-              <input type="text" class="form-control FullName idMobile mb-3" placeholder="Mobile" required>
-            </div>
-            <div>
-              <div class="d-flex mb-3 pt-3">
-                <div class="form-check me-2">
-                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                  <label class="form-check-label" for="flexRadioDefault1">
-                    Mail
-                  </label>
-                </div>
-                <div class="form-check me-2">
-                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                  <label class="form-check-label" for="flexRadioDefault2">
-                    Famale
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                  <label class="form-check-label" for="flexRadioDefault2">
-                    Other
-                  </label>
-                </div>
-              </div>
-              <select class="form-select mb-3 FullName idSelect" aria-label="Default select example" required>
-                <option selected>Department</option>
-                <option value="1">None</option>
-                <option value="2">Marketing</option>
-                <option value="3">Accounting</option>
-                <option value="4">HR</option>
-              </select>
-              <input type="date" class="form-control FullName">
-            </div>
-          </div>
-          <button type="submit" class="btn btn-primary addmodal" data-bs-dismiss="modal" aria-label="Close">Submit</button>
-        </form>
-      </div>
-      <div class="modal-footer">
       </div>
     </div>
   </div>
-</div>
 
 
-<!-- Modal Edited-->
-<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Employee Form</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form class="formEdit">
-          <div class="d-flex justify-content-around">
-            <div class="formModalDiv">
-              <input type="text" class="form-control FullName idNameEdit mb-3" placeholder="FullName" required>
-              <input type="email" class="form-control FullName idEmailEdit mb-3" placeholder="Email" required>
-              <input type="text" class="form-control FullName idMobileEdit mb-3" placeholder="Mobile" required>
-            </div>
-            <div>
-              <div class="d-flex mb-3 pt-3">
-                <div class="form-check me-2">
-                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                  <label class="form-check-label" for="flexRadioDefault1">
-                    Mail
-                  </label>
-                </div>
-                <div class="form-check me-2">
-                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                  <label class="form-check-label" for="flexRadioDefault2">
-                    Famale
-                  </label>
-                </div>
-                <div class="form-check">
-                  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                  <label class="form-check-label" for="flexRadioDefault2">
-                    Other
-                  </label>
-                </div>
+
+
+  <!-- Modal Add-->
+  <div class="modal fade" id="addedModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Employee Form</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form class="formadd">
+            <div class="d-flex justify-content-around">
+              <div class="formModalDiv">
+                <input type="text" class="form-control FullName idName mb-3 line" required placeholder="FullName">
+                <span class="add__err1 d-block mb-2" id="numerr"></span>
+                <input type="email" class="form-control FullName idEmail mb-3 line" required placeholder="Email">
+                <span class="add__err2 d-block mb-2" id="numerr"></span>
+                <input type="text" class="form-control FullName idMobile mb-3 line" required placeholder="Mobile">
+                <span class="add__err" id="numerr"></span>
               </div>
-              <select class="form-select mb-3 FullName idSelectEdit" aria-label="Default select example" required>
-                <option selected>Department</option>
-                <option value="None">None</option>
-                <option value="Marketing">Marketing</option>
-                <option value="Accounting">Accounting</option>
-                <option value="HR">HR</option>
-              </select>
-              <input type="date" class="form-control FullName">
+              <div>
+                <div class="d-flex mb-3 pt-3">
+                  <div class="form-check me-2">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                    <label class="form-check-label" for="flexRadioDefault1">
+                      Mail
+                    </label>
+                  </div>
+                  <div class="form-check me-2">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                    <label class="form-check-label" for="flexRadioDefault2">
+                      Famale
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                    <label class="form-check-label" for="flexRadioDefault2">
+                      Other
+                    </label>
+                  </div>
+                </div>
+                <select class="form-select mb-3 FullName idSelect" aria-label="Default select example" required>
+                  <option selected>Department</option>
+                  <option value="None">None</option>
+                  <option value="Marketing">Marketing</option>
+                  <option value="Accounting">Accounting</option>
+                  <option value="HR">HR</option>
+                </select>
+                <input type="date" class="form-control FullName">
+              </div>
             </div>
-          </div>
-          <button type="submit" class="btn btn-primary addmodal" data-bs-dismiss="modal" aria-label="Close">Submit</button>
+            <button type="submit" class="btn btn-primary addmodal" ">Submit</button>
         </form>
       </div>
-      <div class="modal-footer">
+      <div class=" modal-footer">
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+
+  <!-- Modal Edited-->
+  <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Employee Form</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form class="formEdit">
+            <div class="d-flex justify-content-around">
+              <div class="formModalDiv">
+                <input type="text" class="form-control FullName idNameEdit mb-3" placeholder="FullName" required>
+                <input type="email" class="form-control FullName idEmailEdit mb-3" placeholder="Email" required>
+                <input type="text" class="form-control FullName idMobileEdit mb-3" placeholder="Mobile" required>
+              </div>
+              <div>
+                <div class="d-flex mb-3 pt-3">
+                  <div class="form-check me-2">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                    <label class="form-check-label" for="flexRadioDefault1">
+                      Mail
+                    </label>
+                  </div>
+                  <div class="form-check me-2">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                    <label class="form-check-label" for="flexRadioDefault2">
+                      Famale
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                    <label class="form-check-label" for="flexRadioDefault2">
+                      Other
+                    </label>
+                  </div>
+                </div>
+                <select class="form-select mb-3 FullName idSelectEdit" aria-label="Default select example" required>
+                  <option selected>Department</option>
+                  <option value="None">None</option>
+                  <option value="Marketing">Marketing</option>
+                  <option value="Accounting">Accounting</option>
+                  <option value="HR">HR</option>
+                </select>
+                <input type="date" class="form-control FullName">
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary addmodal" data-bs-dismiss="modal"
+              aria-label="Close">Submit</button>
+          </form>
+        </div>
+        <div class="modal-footer">
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <script src="js/main.js"></script>
+</body>
 
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
-  </body>
 </html>
