--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
             <thead>
               <tr>
                 <th class="hoverN" scope="col">Employee Name
-                  <i class='bx bx-down-arrow-alt head-btn arrow-btn'></i>
+                  <i class='bx bx-down-arrow-alt head-btn icona'></i>
                 </th>
                 <th class="hoverN" scope="col">Email Address (Personal)
-                  <i class='bx bx-down-arrow-alt head-btn arrow-btn'></i>
+                  <i class='bx bx-down-arrow-alt head-btn icona'></i>
                 </th>
                 <th class="hoverN" scope="col">Mobile Number
-                  <i class='bx bx-down-arrow-alt head-btn arrow-btn'></i>
+                  <i class='bx bx-down-arrow-alt head-btn icona'></i>
                 </th>
                 <th class="hoverN" scope="col">Department
-                  <i class='bx bx-down-arrow-alt head-btn arrow-btn'></i>
+                  <i class='bx bx-down-arrow-alt head-btn icona'></i>
                 </th>
                 <th scope="col">Action</th>
               </tr>
@@ -166,9 +166,9 @@
               <div class="formModalDiv">
                 <input type="text" class="form-control FullName idNameEdit mb-3" placeholder="FullName" required>
                 <span class="add__erreD EditM mb-2" id="numerr"></span>
-                <input type="email" class="form-control FullName idEmailEdit mb-3" placeholder="Email" required>
+                <input type="email" class="form-control FullName idEmailEdit mb-3 mt-2" placeholder="Email" required>
                 <span class="add__erreD1 EditM mb-2" id="numerr"></span>
-                <input type="text" class="form-control FullName idMobileEdit mb-3" placeholder="Mobile" required>
+                <input type="text" class="form-control FullName idMobileEdit mb-3 mt-2" placeholder="Mobile" required>
                 <span class="add__erreD2 EditM mb-2" id="numerr"></span>
               </div>
               <div>
