change input mobile

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <span class="add__err1 line mb-2" id="numerr"></span>
                 <input type="email" class="form-control FullName idEmail mb-3 mt-2" required placeholder="Email">
                 <span class="add__err2 line mb-2" id="numerr"></span>
-                <input type="text" class="form-control FullName idMobile mb-3 mt-2" required placeholder="Mobile">
+                <input type="number" class="form-control FullName idMobile mb-3 mt-2" required placeholder="Mobile">
                 <span class="add__err line" id="numerr"></span>
               </div>
               <div>
@@ -168,7 +168,7 @@
                 <span class="add__erreD EditM mb-2" id="numerr"></span>
                 <input type="email" class="form-control FullName idEmailEdit mb-3 mt-2" placeholder="Email" required>
                 <span class="add__erreD1 EditM mb-2" id="numerr"></span>
-                <input type="text" class="form-control FullName idMobileEdit mb-3 mt-2" placeholder="Mobile" required>
+                <input type="numerr" class="form-control FullName idMobileEdit mb-3 mt-2" placeholder="Mobile" required>
                 <span class="add__erreD2 EditM mb-2" id="numerr"></span>
               </div>
               <div>
